--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,98 @@ body{
 }
 
 
+nav{
+    background: #0082e6;
+    height: 60px;
+    width: 100%;
+}
+label.logo{
+    color: white;
+    font-size: 35px;
+    line-height: 60px;
+    padding: 0 100px;
+    font-weight: bold;
+}
+nav ul{
+    float: right;
+    margin-right: 20px;
+
+}
+nav ul li{
+    display: inline-block;
+    line-height: 60px;
+    margin: 0 5px;
+
+}
+nav ul li a{
+    color: white;
+    font-size: 17px;
+    padding: 7px 13px;
+    border-radius: 3px;
+    text-transform: uppercase;
+    transition: all 0.5s ease-in-out;
+    font-weight: 500;
+}
+a.active,a:hover{
+    background: #1b9bff;
+    transition: .5;
+}
+.checkbtn{
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 60px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+
+}
+#check{
+    display: none;
+}
+
+@media (max-width: 952px){
+      label.books-label{
+          font-size: 30px;
+          display: block;
+          padding-left: 40px;
+         
+      }
+      nav ul li a{
+            font-size: 16px;
+      }
+}
+@media (max-width: 400px){
+    label.books-label{
+      
+        display: contents;
+    }
+}
+@media (max-width: 952px){
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #023257;
+        top: 60px;
+        left: -100%;
+        text-align: center;
+        transition: all 0.5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    a:hover{
+        background: none;
+        color: #0082e6;
+    }
+    #check:checked ~ ul{
+        left: 0;
+    }
+
+}
