--- a/src/App.css
+++ b/src/App.css
@@ -6,22 +6,30 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-}
-body{
     font-family: 'Montserrat', sans-serif;
 }
 
 
+
 nav{
     background: #0082e6;
+    
     height: 60px;
     width: 100%;
+    font-family: 'Montserrat', sans-serif;
+    position: fixed;
+ top: 0;
+ width: 100%;
+ z-index: 1;
+
+
+ 
 }
 label.logo{
     color: white;
     font-size: 35px;
     line-height: 60px;
-    padding: 0 100px;
+    padding: 0 95px;
     font-weight: bold;
 }
 nav ul{
@@ -72,6 +80,7 @@ a.active,a:hover{
       nav ul li a{
             font-size: 16px;
       }
+
 }
 @media (max-width: 400px){
     label.books-label{
@@ -105,5 +114,66 @@ a.active,a:hover{
     #check:checked ~ ul{
         left: 0;
     }
+   label.logo{
+        font-size: 30px;
+    display: block;
+    padding-left: 40px;
+    }
 
+}
+section{
+    padding-top: 60px;
+    background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/368893/pexels-photo-368893.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940) round;
+    background-size: cover;
+    height: calc(100vh - 0px);
+    background-origin: content-box;
+}
+.banner{
+      text-align: center;
+      padding-top: 170px;
+
+}
+.main-txt{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 50px;
+    text-transform: uppercase;
+    color: white;
+  
+}
+.small-txt{
+    padding-top: 7px;
+    font-size: 25px;
+    text-transform: uppercase;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+}
+.banner-btn{
+    background: transparent;
+    border: 2px dotted white;
+    color: #fff;
+     font-weight: 700;
+     font-size: 19px;
+     padding: 13px 30px;
+     text-decoration: none;
+     display: inline-block;
+     margin-top: 15px;
+     transition: all .3s ease-in-out;
+     border-radius: 1px;
+     font-family: 'Montserrat', sans-serif;
+     
+}
+.banner-btn:hover{
+       
+    border: 2px solid white;
+    background:  #0082e6;
+    color: white;
+}
+@media (max-width: 790px){
+    .main-txt{
+        font-size: 30px;
+    }
+    .small-txt{
+        font-size: 18px;
+    }
+   
 }
